# Serious-Engine

./: .gitignore  .gitmodules  README.md
Sources/: All.sln  CMakeLists.txt  bison.simple  build-linux32.sh  build-linux64.sh  ecc-common.inl
Sources/DecodeReport/: DecodeReport.cpp  DecodeReport.vcxproj
Sources/DedicatedServer/: CMakeLists.txt  DedicatedServer.cpp  DedicatedServer.vcxproj
Sources/Depend/: Depend.vcxproj  Dependency.cpp  UtilityDepend.cpp
Sources/Ecc/: Ecc.vcxproj  parser.h
Sources/Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  GenerateCommitHash.ps1  SE_Config.h
Sources/EngineGui/: DlgCreateAnimatedTexture.cpp  DlgCreateEffectTexture.cpp  DlgCreateNormalTexture.cpp  DlgSelectMode.cpp  EngineGUI.cpp  EngineGUI.h  EngineGUI.vcxproj  EngineGUI.vcxproj.filters  FileRequester.cpp  MfcStringToCT.inl  WndDisplayTexture.cpp
Sources/EntitiesMP/: BasicEffects.es  BigHead.es  CrateRider.es  Devil.es  DoorController.es  EnemyBase.es  EntitiesMP.vcxproj  Fish.es  Gizmo.es  Grunt.es  GruntSka.es  Headman.es  ModelHolder.es  ModelHolder3.es  Player.es  PlayerAnimator.es  PlayerWeapons.es  Woman.es  WorldBase.es
Sources/GameClient/: CMakeLists.txt  CmdLine.h  Credits.cpp  GLSettings.cpp  GameClient.cpp  GameClient.h  GameClient.rc  GameClient.vcxproj  GameClient.vcxproj.filters  MainWindow.cpp  SplashScreen.cpp  StdH.h
Sources/GameClient/GUI/: MenuElement.cpp  MenuElement.h
Sources/GameClient/GUI/Components/: MGArrow.cpp  MGArrow.h  MGButton.cpp  MGButton.h  MGChangePlayer.cpp  MGChangePlayer.h  MGEdit.cpp  MGEdit.h  MGFileButton.cpp  MGFileButton.h  MGHighScore.cpp  MGHighScore.h  MGKeyDefinition.cpp  MGKeyDefinition.h  MGLevelButton.cpp  MGLevelButton.h  MGModel.cpp  MGModel.h  MGServerList.cpp  MGServerList.h  MGSlider.cpp  MGSlider.h  MGTitle.cpp  MGTitle.h  MGTrigger.cpp  MGTrigger.h  MGVarButton.cpp  MGVarButton.h  MenuGadget.cpp  MenuGadget.h
Sources/GameClient/GUI/Menus/: GameMenu.cpp  GameMenu.h  MAudioOptions.cpp  MAudioOptions.h  MConfirm.cpp  MConfirm.h  MControls.cpp  MControls.h  MCustomizeAxis.cpp  MCustomizeAxis.h  MCustomizeKeyboard.cpp  MCustomizeKeyboard.h  MHighScore.cpp  MHighScore.h  MInGame.cpp  MInGame.h  MLevels.cpp  MLevels.h  MLoadSave.cpp  MLoadSave.h  MMain.cpp  MMain.h  MNetwork.cpp  MNetwork.h  MNetworkJoin.cpp  MNetworkJoin.h  MNetworkOpen.cpp  MNetworkOpen.h  MNetworkStart.cpp  MNetworkStart.h  MOptions.cpp  MOptions.h  MPlayerProfile.cpp  MPlayerProfile.h  MSelectPlayers.cpp  MSelectPlayers.h  MServers.cpp  MServers.h  MSinglePlayer.cpp  MSinglePlayer.h  (+22 more)
Sources/GameClient/Resources/: GameClient.rc
Sources/GameGUIMP/: ConsoleSymbolsCombo.cpp  DlgEditButtonAction.cpp  DlgPlayerControls.cpp  DlgPlayerSettings.cpp  DlgSelectPlayer.cpp  EditConsole.cpp  GameGUI.cpp  GameGUI.rc  GameGUIMP.vcxproj  resource.h
Sources/GameMP/: Camera.cpp  CompModels.cpp  Computer.cpp  Console.cpp  Controls.cpp  Game.cpp  Game.h  GameMP.vcxproj  Interface.cpp  SessionProperties.cpp
Sources/MakeFONT/: MakeFONT.cpp  MakeFONT.vcxproj
Sources/Modeler/: AnimComboBox.cpp  ColoredButton.cpp  DlgAutoMipModeling.cpp  DlgCreateReflectionTexture.cpp  DlgCreateSpecularTexture.cpp  DlgExportForSkinning.cpp  DlgInfoPgAnim.h  DlgInfoPgMip.h  DlgInfoPgPos.h  DlgInfoPgRendering.h  DlgInfoSheet.h  DlgPgCollision.cpp  DlgPgCollision.h  DlgPgInfoAttachingPlacement.cpp  DlgPgInfoAttachingPlacement.h  DlgPgInfoAttachingSound.cpp  DlgPgInfoAttachingSound.h  DlgPreferences.cpp  MainFrm.cpp  MainFrm.h  Modeler.h  (+12 more)
Temp/: README.txt
Tools.Win32/: ecc-common.bat
UserData/: README.txt
VirtualTrees/: BasicVirtualTree.vrt
(+363 files in other folders)
